--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.17.0",
     "@prisma/client": "^5.22.0",
+    "@types/amqplib": "^0.10.5",
+    "amqplib": "^0.10.4",
     "decimal.js": "^10.4.3",
     "hono": "^4.6.9",
     "zod": "^3.23.8"
