--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ export POSTGRES_USER="postgres"
 export PORT=3000
 export DB_PORT=8080
 export DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${DB_PORT}/auction-service-db"
+
+export AWS_ACCESS_KEY_ID=""
+export AWS_SECRET_ACCESS_KEY_ID=""
