--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.2.0",
+    "@aws-sdk/client-sns": "^3.693.0",
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.17.0",
     "@prisma/client": "^5.22.0",
     "@types/amqplib": "^0.10.5",
-    "amqplib": "^0.10.4",
+    "aws-sdk": "^2.1692.0",
     "decimal.js": "^10.4.3",
     "hono": "^4.6.9",
     "zod": "^3.23.8"
