--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "auction-service",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.2.0",
     "@aws-sdk/client-sns": "^3.693.0",
+    "@faker-js/faker": "^9.2.0",
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.17.0",
