--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auction-service",
   "type": "module",
   "scripts": {
+    "start": "tsx watch src/index.ts",
     "dev": "tsx watch src/index.ts",
     "seed": "tsx prisma/seed.ts"
   },
@@ -28,7 +29,6 @@
     "prisma": "^5.22.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.14.0",
-    "zod-prisma": "^0.5.4"
+    "typescript-eslint": "^8.14.0"
   }
 }
