--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "type": "module",
   "scripts": {
     "start": "tsx watch src/index.ts",
-    "dev": "tsx watch src/index.ts",
+    "dev": "DEV=true tsx watch src/index.ts",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.2.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.699.0",
+    "@aws-sdk/client-ses": "^3.699.0",
     "@aws-sdk/client-sns": "^3.693.0",
     "@faker-js/faker": "^9.2.0",
     "@hono/node-server": "^1.13.7",
