--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-export POSTGRES_DB="auction-service-db"
 export POSTGRES_PASSWORD="password"
 export POSTGRES_USER="postgres"
 export PORT=3000
 export DB_PORT=8080
-export DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${DB_PORT}/auction-service-db"
+export DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${DB_PORT}/auction_service_db"
 
 export AWS_ACCESS_KEY_ID=""
 export AWS_SECRET_ACCESS_KEY_ID=""
+export AWS_REGION=""
+export AWS_COGNITO_USERPOOL_ID=""
+
+export RABBITMQ_HOST="guest:guest@rabbitmq" #assuming you use the docker provided docker container
