--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auction-service",
   "type": "module",
   "scripts": {
-    "start": "tsx DEV=false POSTGRES_DB=postgres-db watch src/index.ts",
+    "start": "DEV=false POSTGRES_DB=postgres-db tsx watch src/index.ts",
     "dev": "DEV=true POSTGRES_DB=localhost tsx watch src/index.ts",
     "seed": "tsx prisma/seed.ts"
   },
