--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-export POSTGRES_PASSWORD="password"
-export POSTGRES_USER="postgres"
-export PORT=3000
-export DB_PORT=8080
-export DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${DB_PORT}/auction_service_db"
+export PORT=4000
+export ADMIN_USERID="c1bba5c0-b001-7085-7a2e-e74d5399c3d1"
 
 export AWS_ACCESS_KEY_ID=""
 export AWS_SECRET_ACCESS_KEY_ID=""
-export AWS_REGION=""
-export AWS_COGNITO_USERPOOL_ID=""
+export AWS_REGION="us-east-2"
+export AWS_COGNITO_USERPOOL_ID="us-east-2_gyo9HVnEr"
 
-export RABBITMQ_HOST="guest:guest@rabbitmq" #assuming you use the docker provided docker container
+export RABBITMQ_HOST="rabbitmq"
