--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "auction-service",
   "type": "module",
   "scripts": {
-    "start": "DEV=false tsx watch src/index.ts",
-    "dev": "DEV=true tsx watch src/index.ts",
+    "start": "DEV=FALSE tsx watch src/index.ts",
+    "dev": "DEV=TRUE tsx watch src/index.ts",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
