add updated readme

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ export AWS_REGION="us-east-2"
 export AWS_COGNITO_USERPOOL_ID="us-east-2_gyo9HVnEr"
 
 export RABBITMQ_HOST="rabbitmq"
+export DATABASE_URL: "postgresql://postgres:password@postgres-db:5432/auction_service_db"
