--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,10 @@ services:
       - RABBITMQ_HOST=rabbitmq
       - DATABASE_URL= postgresql://postgres:password@postgres-db:5432/auction_service_db
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      postgres-db:
+        condition: service_healthy
     networks:
       - app-network
 
@@ -30,6 +33,13 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - ./initmq/definitions.json:/etc/rabbitmq/definitions:ro
     networks:
       - app-network
 
