--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "hono": "^4.6.9",
+    "node-cron": "^3.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/node": "^20.17.6",
+    "@types/node-cron": "^3.0.11",
     "add": "^2.0.6",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
